[project]
name = "project-x"
version = "0.1.0"
description = ""
authors = [
    {name = "waldemarX",email = "v.ermakov@xway.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[uvicorn] (>=0.115.7,<0.116.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
